[gd_scene load_steps=38 format=4 uid="uid://dxmikh3ovqoxi"]

[ext_resource type="Script" path="res://Scenes/Levels/piano/pianoplayable.gd" id="1_jga5l"]
[ext_resource type="Texture2D" uid="uid://cvkba0ycmpsgd" path="res://Assets/Tiles/Piano_tilemap.png" id="2_lrdxj"]
[ext_resource type="AudioStream" uid="uid://dv0fy5x7ojllk" path="res://Assets/Music/pianonotes/f3.mp3" id="2_p2vck"]
[ext_resource type="AudioStream" uid="uid://47wxo3k63r5b" path="res://Assets/Music/pianonotes/g3.mp3" id="3_2lpl8"]
[ext_resource type="AudioStream" uid="uid://ct3teauygs3va" path="res://Assets/Music/pianonotes/a4.mp3" id="4_7kglh"]
[ext_resource type="AudioStream" uid="uid://dgglnhv8j3thd" path="res://Assets/Music/pianonotes/b4.mp3" id="5_whrjy"]
[ext_resource type="AudioStream" uid="uid://c5m43xh084wnb" path="res://Assets/Music/pianonotes/c4.mp3" id="6_1ap42"]
[ext_resource type="AudioStream" uid="uid://c7v36mmgh5y72" path="res://Assets/Music/pianonotes/d4.mp3" id="7_1s7r5"]
[ext_resource type="AudioStream" uid="uid://bpaupdtre0kmg" path="res://Assets/Music/pianonotes/e4.mp3" id="8_73c0p"]
[ext_resource type="AudioStream" uid="uid://muq7hljn1xbs" path="res://Assets/Music/pianonotes/f4.mp3" id="9_hfa5g"]
[ext_resource type="AudioStream" uid="uid://beef6ukipihh1" path="res://Assets/Music/pianonotes/g4.mp3" id="10_57b2h"]
[ext_resource type="AudioStream" uid="uid://dna06jslk6dpi" path="res://Assets/Music/pianonotes/a5.mp3" id="11_5rhwo"]
[ext_resource type="Texture2D" uid="uid://7ec2028ocwrn" path="res://Assets/Sprites/pianoworld/piano tile sound animation.png" id="12_bubhx"]
[ext_resource type="Texture2D" uid="uid://b2pnqj4qps8jy" path="res://Assets/Sprites/pianoworld/lightup.png" id="13_kd0pp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2d7tk"]
texture = ExtResource("2_lrdxj")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_r8r7h"]
sources/0 = SubResource("TileSetAtlasSource_2d7tk")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqd64"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7nqoh"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vvde6"]
size = Vector2(30, 75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5whi"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qoadw"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_80sg3"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fntbp"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjaol"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8q6fs"]
size = Vector2(30, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1samr"]
size = Vector2(30.5, 74.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_dc8w3"]
atlas = ExtResource("12_bubhx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk105"]
atlas = ExtResource("12_bubhx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ow7e"]
atlas = ExtResource("12_bubhx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fa2yk"]
atlas = ExtResource("12_bubhx")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jf328"]
atlas = ExtResource("12_bubhx")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t87kr"]
atlas = ExtResource("12_bubhx")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_26kdi"]
atlas = ExtResource("12_bubhx")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7f1q"]
atlas = ExtResource("12_bubhx")
region = Rect2(64, 128, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_bvx42"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dc8w3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk105")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ow7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fa2yk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf328")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t87kr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26kdi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7f1q")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dgm0x"]
atlas = ExtResource("13_kd0pp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_g72qc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgm0x")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Pianoplayable" type="Node2D"]
script = ExtResource("1_jga5l")

[node name="TileMap" type="TileMap" parent="."]
format = 2

[node name="TileMapLayer" type="TileMapLayer" parent="TileMap"]
position = Vector2(4, -4)
tile_map_data = PackedByteArray("AAABAAAAAAADAAEAAFACAAAAAAADAAEAAFADAAAAAAADAAEAAFAEAAAAAAADAAEAAFAFAAAAAAADAAEAAFAGAAAAAAADAAEAAFAHAAAAAAADAAEAAFAIAAAAAAADAAEAAFAJAAAAAAADAAEAAFAKAAAAAAADAAEAAFALAAAAAAADAAEAAFAMAAAAAAADAAEAAFANAAAAAAADAAEAAFAOAAAAAAADAAEAAFAOAAEAAAABAAEAAAAPAAEAAAABAAEAAAAQAAEAAAABAAEAAAARAAEAAAABAAEAAAASAAEAAAABAAEAAAATAAEAAAABAAEAAAAUAAEAAAABAAEAAAAQAAAAAAADAAEAAFARAAAAAAADAAEAAFASAAAAAAADAAEAAFATAAAAAAADAAEAAFAUAAAAAAADAAEAAFAVAAAAAAADAAEAAFAWAAAAAAADAAEAAFAXAAAAAAADAAEAAFAYAAAAAAADAAEAAFAZAAAAAAADAAEAAFAaAAAAAAADAAEAAFAbAAAAAAABAAEAAAABAAYAAAAAAAMAAGACAAYAAAACAAMAAAADAAYAAAADAAMAAAAEAAYAAAABAAMAAFAFAAYAAAACAAMAAAAGAAYAAAADAAMAAAAHAAYAAAABAAMAAFAIAAYAAAACAAMAAAAJAAYAAAADAAMAAAAKAAYAAAACAAMAAAALAAYAAAADAAMAAAAMAAYAAAABAAMAAFANAAYAAAACAAMAAAAOAAYAAAADAAMAAAAPAAYAAAABAAMAAFAQAAYAAAACAAMAAAARAAYAAAADAAMAAAASAAYAAAACAAMAAAATAAYAAAADAAMAAAAUAAYAAAACAAMAAAAVAAYAAAADAAMAAAAWAAYAAAABAAMAAFAXAAYAAAACAAMAAAAYAAYAAAADAAMAAAAZAAYAAAACAAMAAAAaAAYAAAADAAMAAAAbAAYAAAABAAMAAFAGAAIAAAACAAMAADACAAIAAAADAAMAADADAAIAAAACAAMAADAEAAIAAAABAAIAAAAFAAIAAAADAAMAADAGAAQAAAABAAMAAAAHAAQAAAABAAIAAAAIAAUAAAAAAAMAAAAJAAQAAAABAAMAAAALAAUAAAABAAMAAAANAAMAAAAAAAMAAAAIAAIAAAADAAMAADAJAAIAAAACAAMAADAKAAIAAAADAAMAADALAAIAAAACAAMAADANAAIAAAADAAMAADAOAAIAAAACAAMAADAQAAIAAAADAAMAADARAAIAAAACAAMAADASAAIAAAADAAMAADATAAIAAAACAAMAADAUAAIAAAADAAMAADAVAAIAAAACAAMAADAXAAIAAAADAAMAADAYAAIAAAACAAMAADAZAAIAAAADAAMAADAaAAIAAAACAAMAADACAAMAAAAAAAMAAAACAAQAAAAAAAMAAAACAAUAAAAAAAMAAAADAAMAAAABAAMAAAADAAQAAAABAAMAAAADAAUAAAABAAMAAAAGAAMAAAABAAMAAAAGAAUAAAABAAMAAAAJAAMAAAABAAMAAAAJAAUAAAABAAMAAAALAAMAAAABAAMAAAALAAQAAAABAAMAAAAOAAMAAAABAAMAAAAOAAQAAAABAAMAAAAOAAUAAAABAAMAAAARAAMAAAABAAMAAAARAAQAAAABAAMAAAARAAUAAAABAAMAAAATAAMAAAABAAMAAAATAAQAAAABAAMAAAATAAUAAAABAAMAAAAVAAMAAAABAAMAAAAVAAQAAAABAAMAAAAVAAUAAAABAAMAAAAaAAMAAAABAAMAAAAaAAQAAAABAAMAAAAaAAUAAAABAAMAAAAYAAMAAAABAAMAAAAYAAQAAAABAAMAAAAYAAUAAAABAAMAAAAXAAMAAAAAAAMAAAAXAAQAAAAAAAMAAAAXAAUAAAAAAAMAAAAZAAMAAAAAAAMAAAAZAAQAAAAAAAMAAAAZAAUAAAAAAAMAAAAUAAMAAAAAAAMAAAAUAAQAAAAAAAMAAAAUAAUAAAAAAAMAAAASAAMAAAAAAAMAAAASAAQAAAAAAAMAAAASAAUAAAAAAAMAAAAQAAMAAAAAAAMAAAAQAAQAAAAAAAMAAAAQAAUAAAAAAAMAAAANAAQAAAAAAAMAAAANAAUAAAAAAAMAAAAIAAMAAAAAAAMAAAAIAAQAAAAAAAMAAAAKAAMAAAAAAAMAAAAKAAQAAAAAAAMAAAAKAAUAAAAAAAMAAAAFAAMAAAAAAAMAAAAFAAQAAAAAAAMAAAAFAAUAAAAAAAMAAAAEAAMAAAABAAIAAAAEAAQAAAABAAIAAAAEAAUAAAACAAEAAAAHAAUAAAACAAEAAAAMAAUAAAACAAEAAAAPAAUAAAACAAEAAAAWAAUAAAACAAEAAAAbAAUAAAACAAEAAAAHAAIAAAABAAIAAAAHAAMAAAABAAIAAAAMAAIAAAABAAIAAAAMAAMAAAABAAIAAAAMAAQAAAABAAIAAAAPAAIAAAABAAIAAAAPAAMAAAABAAIAAAAPAAQAAAABAAIAAAAWAAIAAAABAAIAAAAWAAMAAAABAAIAAAAWAAQAAAABAAIAAAAbAAIAAAABAAIAAAAbAAQAAAABAAIAAAABAAIAAAABAAIAAAABAAMAAAABAAIAAAABAAQAAAABAAIAAAABAAUAAAACAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAKAAEAAAABAAEAAAALAAEAAAABAAEAAAAMAAEAAAABAAEAAAANAAEAAAABAAEAAAAPAAAAAAADAAEAAFAVAAEAAAABAAEAAAAXAAEAAAABAAEAAAAWAAEAAAABAAEAAAAYAAEAAAABAAEAAAAZAAEAAAABAAEAAAAaAAEAAAADAAEAADAbAAEAAAABAAEAAAAbAAMAAAABAAIAAAA=")
tile_set = SubResource("TileSet_r8r7h")

[node name="tiles" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="f3" type="Area2D" parent="tiles"]

[node name="f3" type="CollisionShape2D" parent="tiles/f3"]
position = Vector2(52, 68)
shape = SubResource("RectangleShape2D_tqd64")

[node name="g3" type="Area2D" parent="tiles"]

[node name="g3" type="CollisionShape2D" parent="tiles/g3"]
position = Vector2(100, 68)
shape = SubResource("RectangleShape2D_7nqoh")

[node name="a4" type="Area2D" parent="tiles"]

[node name="a4" type="CollisionShape2D" parent="tiles/a4"]
position = Vector2(148, 68)
shape = SubResource("RectangleShape2D_vvde6")

[node name="b4" type="Area2D" parent="tiles"]

[node name="b4" type="CollisionShape2D" parent="tiles/b4"]
position = Vector2(180, 68)
shape = SubResource("RectangleShape2D_t5whi")

[node name="c4" type="Area2D" parent="tiles"]

[node name="c4" type="CollisionShape2D" parent="tiles/c4"]
position = Vector2(228, 68)
shape = SubResource("RectangleShape2D_qoadw")

[node name="d4" type="Area2D" parent="tiles"]

[node name="d4" type="CollisionShape2D" parent="tiles/d4"]
position = Vector2(276, 68)
shape = SubResource("RectangleShape2D_80sg3")

[node name="e4" type="Area2D" parent="tiles"]

[node name="e4" type="CollisionShape2D" parent="tiles/e4"]
position = Vector2(308, 68)
shape = SubResource("RectangleShape2D_fntbp")

[node name="f4" type="Area2D" parent="tiles"]

[node name="f4" type="CollisionShape2D" parent="tiles/f4"]
position = Vector2(340, 68)
shape = SubResource("RectangleShape2D_tjaol")

[node name="g4" type="Area2D" parent="tiles"]

[node name="g4" type="CollisionShape2D" parent="tiles/g4"]
position = Vector2(388, 68)
shape = SubResource("RectangleShape2D_8q6fs")

[node name="a5" type="Area2D" parent="tiles"]

[node name="a5" type="CollisionShape2D" parent="tiles/a5"]
position = Vector2(420, 68)
shape = SubResource("RectangleShape2D_1samr")

[node name="Notes" type="Node2D" parent="."]

[node name="f3" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("2_p2vck")

[node name="g3" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("3_2lpl8")

[node name="a4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("4_7kglh")

[node name="b4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("5_whrjy")

[node name="c4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("6_1ap42")

[node name="d4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("7_1s7r5")

[node name="e4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("8_73c0p")

[node name="f4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("9_hfa5g")

[node name="g4" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("10_57b2h")

[node name="a5" type="AudioStreamPlayer2D" parent="Notes"]
stream = ExtResource("11_5rhwo")

[node name="tile_animations" type="Node2D" parent="."]

[node name="f3" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(52, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="g3" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(100, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="a4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(148, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="b4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(180, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="c4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(228, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="d4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(276, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="e4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(308, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="f4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(340, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="g4" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(388, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="a5" type="AnimatedSprite2D" parent="tile_animations"]
position = Vector2(420, 92)
scale = Vector2(0.5, 1)
sprite_frames = SubResource("SpriteFrames_bvx42")

[node name="light_up" type="Node2D" parent="."]
position = Vector2(164, 204)
scale = Vector2(0.0405895, 0.0408514)

[node name="f3" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(-2759.34, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="g3" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(-1576.76, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="a4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(-394.191, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="b4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(394.191, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="c4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(1576.76, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="d4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(2759.34, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="e4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(3547.72, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="f4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(4336.1, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="g4" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(5518.67, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="a5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(6307.05, -3329.14)
scale = Vector2(18.4777, 55.0777)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="f5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(52, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="g5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(100, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="a6" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(148, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="b5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(4336.1, 293.747)
scale = Vector2(-0.0234375, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="c5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(228, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="d5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(276, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="e5" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(308, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="f6" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(340, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="g6" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(388, 68)
scale = Vector2(0.75, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[node name="a7" type="AnimatedSprite2D" parent="light_up"]
position = Vector2(420, 68)
scale = Vector2(0.749999, 2.25)
sprite_frames = SubResource("SpriteFrames_g72qc")

[connection signal="body_shape_entered" from="tiles/f3" to="." method="_on_f_3_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/g3" to="." method="_on_g_3_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/a4" to="." method="_on_a_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/b4" to="." method="_on_b_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/c4" to="." method="_on_c_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/d4" to="." method="_on_d_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/e4" to="." method="_on_e_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/f4" to="." method="_on_f_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/g4" to="." method="_on_g_4_body_shape_entered"]
[connection signal="body_shape_entered" from="tiles/a5" to="." method="_on_a_5_body_shape_entered"]
